--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>127.0.0.1:5500</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body background="img/google2.png">
+<body background="img/google-02.png">
 
 <div id="impress">
 
@@ -12,34 +12,126 @@
         <!-- Start -->
     </div>
 
-    <div class="step" data-x="0" data-y="1000">
-        <h1 class="-step-title">پیش بینی</h1>
-        <div class="-step-img">
-            <img class="-img" src="img/1.jpg" alt="">
-        </div>
+    <div class="step header" data-x="0" data-y="1000">
+        <h2 class="step-header">طراحی واسط برنامه های تحت وب</h2>
     </div>
 
-    <div class="step" data-x="0" data-y="2000">
-        <h1 class="-step-title">ارتباط</h1>
-        <div class="-step-img">
-            <img class="-img" src="img/1.jpg" alt="">
-        </div>
+    <div class="step header" data-x="0" data-y="2000">
+        <h2 class="step-header">دستورالعمل ها و اصول طراحی واسط</h2>
     </div>
 
     <div class="step" data-x="1500" data-y="2000">
+        <h1 class="-step-title">پیش بینی</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/1.jpg"/>
+        </div>
+    </div>
+
+    <div class="step" data-x="3000" data-y="2000">
+        <h1 class="-step-title">ارتباطات</h1>
+        <div class="-step-img">
+            <img class="-img-2" src="img/ertebat-01.jpg" />
+            <img class="-img-2" src="img/ertebat-02.jpg" />
+        </div>
+    </div>
+
+    <div class="step" data-x="4500" data-y=2000">
         <h1 class="-step-title">سازگاری</h1>
         <div class="-step-img">
-            <img class="-img" src="img/1.jpg" alt="">
+            <img class="-img" src="img/sazegari.png" />
         </div>
     </div>
 
-    <div class="step" data-x="1500" data-y="3000">
+    <div class="step" data-x="6000" data-y=2000">
         <h1 class="-step-title">خود مختاری کنترل شده</h1>
         <div class="-step-img">
-            <img class="-img" src="img/1.jpg" alt="">
+            <img class="-img" src="img/khodmokhtari.png" />
         </div>
     </div>
 
+    <div class="step" data-x="7500" data-y=2000">
+        <h1 class="-step-title">بازدهی</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/bazdehi.jpg" />
+        </div>
+    </div>
+
+    <div class="step" data-x="9000" data-y=2000">
+        <h1 class="-step-title">انعطاف پذیری</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/enetaf.png" />
+        </div>
+    </div>
+
+    <div class="step" data-x="10500" data-y=2000">
+        <h1 class="-step-title">کانون توجه</h1>
+        <div class="-step-img" style="background-color: #f6f7f9;">
+            <img class="-img" style="object-fit: contain;" src="img/tavajoh.jpeg" />
+        </div>
+    </div>
+
+    <div class="step" data-x="12000" data-y=2000">
+        <h1 class="-step-title">قانون فیت</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/1.jpg"/>
+        </div>
+    </div>
+
+    <div class="step" data-x="13500" data-y=2000">
+        <h1 class="-step-title">اشیا واسط انسانی</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/1.jpg"/>
+        </div>
+    </div>
+
+    <div class="step" data-x="15000" data-y=2000">
+        <h1 class="-step-title">کاهش تاخیر</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/1.jpg"/>
+        </div>
+    </div>
+
+    <div class="step" data-x="16500" data-y=2000">
+        <h1 class="-step-title">قابلیت یادگیری</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/1.jpg"/>
+        </div>
+    </div>
+
+    <div class="step" data-x="18000" data-y=2000">
+        <h1 class="-step-title">استعاره ها</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/1.jpg"/>
+        </div>
+    </div>
+
+    <div class="step" data-x="19500" data-y="2000">
+        <h1 class="-step-title">حفظ انجام محصول کاری</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/1.jpg"/>
+        </div>
+    </div>
+
+    <div class="step" data-x="21000" data-y="2000">
+        <h1 class="-step-title">خوانایی</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/1.jpg"/>
+        </div>
+    </div>
+
+    <div class="step" data-x="22500" data-y="2000">
+        <h1 class="-step-title">وضعیت پیگیری</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/1.jpg"/>
+        </div>
+    </div>
+
+    <div class="step" data-x="24000" data-y="2000">
+        <h1 class="-step-title">گشت و گذار مرئی</h1>
+        <div class="-step-img">
+            <img class="-img" src="img/1.jpg"/>
+        </div>
+    </div>
 </div>
 
 <script src="js/impress.js"></script>
