--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
     <div class="step" data-x="10500" data-y=2000">
         <h1 class="-step-title">کانون توجه</h1>
-        <div class="-step-img" style="background-color: #f6f7f9;">
-            <img class="-img" style="object-fit: contain;" src="img/tavajoh.jpeg" />
+        <div class="-step-img" style="background-image: linear-gradient( to bottom, #d6e5f7, #d6e5f7, #68a6cb);">
+            <img class="-img -ob-con" src="img/mini.png" />
         </div>
     </div>
 
@@ -87,14 +87,14 @@
     <div class="step" data-x="15000" data-y=2000">
         <h1 class="-step-title">کاهش تاخیر</h1>
         <div class="-step-img">
-            <img class="-img" src="img/1.jpg"/>
+            <img class="-img" src="img/Download.jpg"/>
         </div>
     </div>
 
     <div class="step" data-x="16500" data-y=2000">
         <h1 class="-step-title">قابلیت یادگیری</h1>
-        <div class="-step-img">
-            <img class="-img" src="img/1.jpg"/>
+        <div class="-step-img" style="background-color: #e0f9fe;">
+            <img class="-img -ob-con" src="img/processed (2).jpeg"/>
         </div>
     </div>
 
@@ -107,29 +107,29 @@
 
     <div class="step" data-x="19500" data-y="2000">
         <h1 class="-step-title">حفظ انجام محصول کاری</h1>
-        <div class="-step-img">
-            <img class="-img" src="img/1.jpg"/>
+        <div class="-step-img" style="background-color: #eeeeee;">
+            <img class="-img -ob-con" src="img/processed (1).jpeg"/>
         </div>
     </div>
 
     <div class="step" data-x="21000" data-y="2000">
         <h1 class="-step-title">خوانایی</h1>
-        <div class="-step-img">
-            <img class="-img" src="img/1.jpg"/>
+        <div class="-step-img" style="background-color: #ed8f33;">
+            <img class="-img -ob-con" src="img/processed.jpeg"/>
         </div>
     </div>
 
     <div class="step" data-x="22500" data-y="2000">
         <h1 class="-step-title">وضعیت پیگیری</h1>
-        <div class="-step-img">
-            <img class="-img" src="img/1.jpg"/>
+        <div class="-step-img" style="background-color: #86bdd1;">
+            <img class="-img -ob-con" src="img/peygiri.jpg.crdownload"/>
         </div>
     </div>
 
     <div class="step" data-x="24000" data-y="2000">
         <h1 class="-step-title">گشت و گذار مرئی</h1>
-        <div class="-step-img">
-            <img class="-img" src="img/1.jpg"/>
+        <div class="-step-img" style="background-color: #c9e3b4;">
+            <img class="-img -ob-con" src="img/beauti.jpg"/>
         </div>
     </div>
 </div>
