--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
         <!-- Start -->
     </div>
 
-    <div class="step header" data-x="0" data-y="1000">
-        <h2 class="step-header">طراحی واسط برنامه های تحت وب</h2>
+    <div class="step header" style="align-items: center;" data-x="0" data-y="1000">
+        <div class="test">
+            <h2 class="step-header">طراحی واسط برنامه های تحت وب</h2>
+            <ol style="line-height: 35px;">
+                یک واسط برنامه ی تحت وب باید طوری طراحی بشه که به سه پرسش اولیه در مورد کاربر نهایی داسخ بدهد:
+                <li>من کجا هستم؟</li>
+                <li>اکنون چه میتوانم بکنم؟</li>
+                <li>کجا بوده ام و به کجا خواهم رفت؟</li>
+            </ol>
+        </div>
     </div>
 
     <div class="step header" data-x="0" data-y="2000">
@@ -23,7 +31,7 @@
     <div class="step" data-x="1500" data-y="2000">
         <h1 class="-step-title">پیش بینی</h1>
         <div class="-step-img">
-            <img class="-img" src="img/1.jpg"/>
+            <img class="-img" src="img/exploring.png"/>
         </div>
     </div>
 
@@ -72,15 +80,15 @@
 
     <div class="step" data-x="12000" data-y=2000">
         <h1 class="-step-title">قانون فیت</h1>
-        <div class="-step-img">
-            <img class="-img" src="img/1.jpg"/>
+        <div class="-step-img" style="background-color: #f3f3f3;">
+            <img class="-img -ob-con" src="img/fit.png"/>
         </div>
     </div>
 
     <div class="step" data-x="13500" data-y=2000">
         <h1 class="-step-title">اشیا واسط انسانی</h1>
         <div class="-step-img">
-            <img class="-img" src="img/1.jpg"/>
+            <img class="-img -ob-con" src="img/web.png"/>
         </div>
     </div>
 
@@ -101,7 +109,7 @@
     <div class="step" data-x="18000" data-y=2000">
         <h1 class="-step-title">استعاره ها</h1>
         <div class="-step-img">
-            <img class="-img" src="img/1.jpg"/>
+            <img class="-img" src="img/download-all-images-from-web.jpg"/>
         </div>
     </div>
 
@@ -131,6 +139,44 @@
         <div class="-step-img" style="background-color: #c9e3b4;">
             <img class="-img -ob-con" src="img/beauti.jpg"/>
         </div>
+    </div>
+
+    <div class="step header" style="align-items: center;" data-x="24000" data-y="3000">
+        <div class="test">
+            <ul style="line-height: 35px;">
+                <li>سرعت خواندن مطالب روی مانیتور 25٪ آهسته تر از خواندن رو کاغذ است.</li>
+                <li>از پیام های "در دست احداث" بپرهیزید.</li>
+                <li>کاربران ترجیح میدهند در پنجره حرکت نکنند.</li>
+                <li>منو های گشت و گذار و نوار های باید صورت سازگار طراحی شوند و باید در تمامی صفحات در دسترس باشند. </li>
+                <li>زیبایی هرگز نباید بر قابلیت عملیاتی پیشی بگیرد.</li>
+                <li>گزینه های گشت و گذار حتی برای کاربران عبوری باید واضح باشند</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="step header" data-x="24000" data-y="4000">
+        <h2 class="step-header">جریان کاری طراحی واسط برای برنامه های تحت وب</h2>
+    </div>
+
+    <div class="step" data-x="25500" data-y="4000">
+        <div class="-step-img" style="background-color: #fff; height: 100% !important;">
+            <img class="-img -ob-con" src="img/Untitled.png"/>
+        </div>
+    </div>
+
+    <div class="step header" data-x="25500" data-y="5000">
+        <h2 class="step-header">ارزیابی طراحی</h2>
+    </div>
+
+    <div class="step" data-x="27000" data-y="5000">
+        <h1 class="-step-title">چرخه ی ارزیابی واسط کاربر</h1>
+        <div class="-step-img" style="background-color: #fff;">
+            <img class="-img -ob-con" src="img/arzyabiii.jpeg"/>
+        </div>
+    </div>
+
+    <div class="step" data-x="27000" data-y="6000">
+        <!-- End -->
     </div>
 </div>
 
