Some changes were left to be corrected

--- a/index.html
+++ b/index.html
@@ -43,70 +43,70 @@
         </div>
     </div>
 
-    <div class="step" data-x="4500" data-y=2000">
+    <div class="step" data-x="4500" data-y="2000">
         <h1 class="-step-title">سازگاری</h1>
         <div class="-step-img">
             <img class="-img" src="img/sazegari.png" />
         </div>
     </div>
 
-    <div class="step" data-x="6000" data-y=2000">
+    <div class="step" data-x="6000" data-y="2000">
         <h1 class="-step-title">خود مختاری کنترل شده</h1>
         <div class="-step-img">
             <img class="-img" src="img/khodmokhtari.png" />
         </div>
     </div>
 
-    <div class="step" data-x="7500" data-y=2000">
+    <div class="step" data-x="7500" data-y="2000">
         <h1 class="-step-title">بازدهی</h1>
         <div class="-step-img">
             <img class="-img" src="img/bazdehi.jpg" />
         </div>
     </div>
 
-    <div class="step" data-x="9000" data-y=2000">
+    <div class="step" data-x="9000" data-y="2000">
         <h1 class="-step-title">انعطاف پذیری</h1>
         <div class="-step-img">
             <img class="-img" src="img/enetaf.png" />
         </div>
     </div>
 
-    <div class="step" data-x="10500" data-y=2000">
+    <div class="step" data-x="10500" data-y="2000">
         <h1 class="-step-title">کانون توجه</h1>
         <div class="-step-img" style="background-image: linear-gradient( to bottom, #d6e5f7, #d6e5f7, #68a6cb);">
             <img class="-img -ob-con" src="img/mini.png" />
         </div>
     </div>
 
-    <div class="step" data-x="12000" data-y=2000">
+    <div class="step" data-x="12000" data-y="2000">
         <h1 class="-step-title">قانون فیت</h1>
         <div class="-step-img" style="background-color: #f3f3f3;">
             <img class="-img -ob-con" src="img/fit.png"/>
         </div>
     </div>
 
-    <div class="step" data-x="13500" data-y=2000">
+    <div class="step" data-x="13500" data-y="2000">
         <h1 class="-step-title">اشیا واسط انسانی</h1>
         <div class="-step-img">
             <img class="-img -ob-con" src="img/web.png"/>
         </div>
     </div>
 
-    <div class="step" data-x="15000" data-y=2000">
+    <div class="step" data-x="15000" data-y="2000">
         <h1 class="-step-title">کاهش تاخیر</h1>
         <div class="-step-img">
             <img class="-img" src="img/Download.jpg"/>
         </div>
     </div>
 
-    <div class="step" data-x="16500" data-y=2000">
+    <div class="step" data-x="16500" data-y="2000">
         <h1 class="-step-title">قابلیت یادگیری</h1>
         <div class="-step-img" style="background-color: #e0f9fe;">
             <img class="-img -ob-con" src="img/processed (2).jpeg"/>
         </div>
     </div>
 
-    <div class="step" data-x="18000" data-y=2000">
+    <div class="step" data-x="18000" data-y="2000">
         <h1 class="-step-title">استعاره ها</h1>
         <div class="-step-img">
             <img class="-img" src="img/download-all-images-from-web.jpg"/>
